# transformED

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml
.claude/: .gitignore  settings.json
.claude/commands/: add-migration.md  add-pipeline-node.md  check-costs.md  gen-prompt.md  new-feature.md  run-evals.md
.github/workflows/: ci.yml  deploy.yml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-07-real-websocket-client.md  1-1-post-lessons-endpoint-arq-job-enqueue.md  1-2-pdf-extraction-node-pdfplumber-docling-tesseract-ocr.md  1-3-structure-detection-node-rule-based-llm-validation.md  1-4-semantic-chunking-node.md  deferred-work.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
apps/api/: .gitignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/core/: circuit_breaker.py  cost_tracker.py  db.py  langfuse.py  posthog_client.py  pubsub.py  queues.py  rate_limit.py  redis.py  retry.py  storage.py  websocket.py
apps/api/app/modules/admin/: router.py
apps/api/app/modules/analytics/: router.py  service.py
apps/api/app/modules/assessment/: ces.py  ces_baseline.py  dna_fusion.py  dna_growth.py  dna_profile.py  onboarding_questions.py  prompts.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/: router.py
apps/api/app/modules/content/: router.py
apps/api/app/modules/content/pipeline/: graph.py
apps/api/app/modules/content/pipeline/nodes/: chunking.py  extract_subprocess.py  structure_detection.py
apps/api/app/modules/media/: router.py
apps/api/app/modules/tutor/: router.py  service.py
apps/api/app/modules/tutor/state_machine/: graph.py
apps/api/app/providers/: base.py
apps/api/app/providers/avatar/: heygen.py
apps/api/app/providers/embeddings/: __init__.py  openai.py
apps/api/app/providers/image/: dalle.py  imagen.py  openai_image.py
apps/api/app/providers/llm/: factory.py  openai.py
apps/api/app/providers/tts/: azure.py  elevenlabs.py  sarvam.py
apps/api/app/schemas/: __init__.py  lesson.py
apps/api/app/workers/: main.py
apps/api/app/workers/jobs/: content_pipeline.py
apps/api/scripts/: export_openapi.py
apps/api/tests/: conftest.py  test_analytics_events_endpoint.py  test_analytics_summary_endpoint.py  test_assessment_stub_contracts.py  test_auth.py  test_ces.py  test_ces_baseline.py  test_config_settings.py  test_dna_fusion.py  test_dna_growth.py  test_dna_profile.py  test_lesson_ready_integration.py  test_lesson_ready_pubsub.py  test_llm_provider_smoke.py  test_migration_analytics_schema.py  test_migration_assessment_schema.py  test_onboarding_content.py  test_onboarding_endpoint.py  test_openapi_spec.py  test_posthog_events.py  test_quiz_endpoint.py  test_reassessment_flag.py  test_session_report_endpoint.py  test_suite_health.py  test_teachback_endpoint.py  test_teachback_scoring_prompt.py  test_tutor_graph.py  test_tutor_service.py  test_websocket_session.py  test_ws_load_test.py
apps/api/tests/evals/: conftest.py  runner.py  scoring.py  test_live_run.py
apps/api/tests/fixtures/: generate_eval_pdfs.py
apps/api/tests/integration/: test_howto_pipeline_e2e.py
apps/api/tests/unit/: test_bucket_manifest.py  test_chunk_node.py  test_coalesce_sections.py  test_content_router.py  test_cost_tracker.py  test_derive_section_id.py  test_embed_node.py  test_eval_runner.py  test_eval_scoring.py  test_extract_node.py  test_extract_subprocess.py  test_image_generator_node.py  test_image_providers.py  test_jwt_audience.py  test_langfuse_core.py  test_langfuse_sdk_contract.py  test_learner_mode_tier.py  test_lesson_planner_node.py  test_lesson_schema.py  test_llm_provider_factory.py  test_media_router.py  test_narration_timestamps.py  test_package_builder_node.py  test_phase1_checkpoint_idempotency.py  test_phase1_economy_nodes.py  test_pipeline_tier1.py  test_provider_tracing_resilience.py  test_queue_symmetry.py  test_quiz_generator_tier.py  test_retry.py  test_runtime_deps.py  test_slide_generator_node.py  test_storage_helper.py  test_structure_node.py  test_timeout_contract.py  test_tts_node.py  test_tts_providers.py
apps/web/: .gitignore  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
demo-assets/: .gitignore
docs/: TEAM_ONBOARDING.md  agile-process.md  app-audit-2026-07-04.md  decisionupdate.md  deferred-work.md  dev1-pipeline-test-fix-handoff.md  dev1-pydantic-schemas-task.md  dev1-tracker.md  dev2-assessment-api-handoff.md  dev2-frontend-role.md  dev2-lesson-content-wiring-handoff.md  dev2-sprint-tracker.md  dev3-assessment-tracker.md  dev3-branch-map.md  dev4-tracker.md  dev4-websocket-test-fix-handoff.md  dev4-websocket-tutor-tracker.md  learner-mode-sprint-audit-report.md  master-tracker.md  openapi-assessment.json  sprint1-dev3-report.md  sprint4-ces-threshold-analysis.md  sprint4-cooldown-tuning.md  sprint4-intervention-copy-review.md  sprint4-intervention-review.md  sprint4-ws-load-test.md  ws-message-contract.md
docs/reports/: s16-lessonpackage-compat.md
docs/stories/: 1-10-dashboard-real-data-integration.md  1-6-lesson-content-endpoint.md  1-7-wire-player-to-real-lesson-content.md  1-8-upload-real-api.md  1-9-library-real-data-integration.md  2-0-pipeline-integration-fixes.md  2-0b-page-scoped-docling.md  2-1-phase1-economy-nodes.md  2-10-tier-context-wiring.md  2-11-package-builder-node.md  2-11-quiz-feedback-field-fix.md  2-12-lesson-ready-websocket-push.md  2-12-reassessment-prompt.md  2-13-assessment-test-fixes.md  2-13-cost-ceiling-enforcement.md  2-14-eval-harness-5-pdfs.md  (+80 more)
learning-docs/: 00-sprint1-overview.md  01-api-and-queue.md  02-pdf-extraction.md  03-structure-and-chunking.md  04-embeddings-and-providers.md  05-key-decisions-why.md  06-interview-cheatsheet.md  CONTEXT-NEW-CHAT.md  PIPELINE-DEEP-ANALYSIS.md
scripts/: check_dev4_progress.py  mock_ws_client.py  ws_load_test.py
supabase/: config.toml
(+214 files in other folders)
