[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformED-api"
version = "0.1.0"
description = "TransformED AI — backend API (Sprint 0 skeleton)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "PyJWT>=2.8.0",
    "supabase>=2.4.0",        # uses httpx transport — bypasses PgBouncer
    "redis[hiredis]>=5.0.4",
    "arq>=0.26.0",
    "langgraph>=0.1.0",       # PINNED — never auto-upgrade per PRD §24
    "langchain-openai>=0.1.0",
    "openai>=1.40.0",              # beta.chat.completions.parse requires >=1.40.0
    "anthropic>=0.26.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "langfuse>=2.0.0",
    "posthog>=3.0.0",
    "sentry-sdk[fastapi]>=2.4.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # bandit security
    "T20", # flake8-print (no print statements)
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # assert statements allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fitz.*",
    "pdfplumber.*",
    "pytesseract.*",
    "langfuse.*",
    "arq.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "slow: tests that take > 2 seconds",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
