[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "hie-api"
version = "0.1.0"
description = "HIE — Human Intelligence Engine backend API (Sprint 0 skeleton)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "PyJWT>=2.8.0",
    "supabase>=2.4.0",        # uses httpx transport — bypasses PgBouncer
    "redis[hiredis]>=5.0.4",
    "arq>=0.26.0",
    "langgraph==1.2.6",       # PINNED — never auto-upgrade per PRD §24
    "langchain-openai>=0.1.0",
    "openai>=1.40.0",              # beta.chat.completions.parse requires >=1.40.0
    "anthropic>=0.26.0",
    "docling>=2.0.0,<3.0.0",     # Apache 2.0 — table extraction; replaces PyMuPDF (AGPL-3.0 banned); pinned per CLAUDE.md policy
    "pdftext>=0.6.0,<1.0.0",    # Apache 2.0 — structured font/layout metadata (blocks→lines→spans); brings pypdfium2 4.30.0 as dep
    "pdfplumber>=0.11.0",        # MIT — retained only for table detection trigger (page.extract_tables() → docling)
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "langfuse>=4.0.0,<5.0.0",   # v4 OTel API (start_observation) — v2 .trace()/.generation() removed; pinned per AC-3
    "posthog>=3.0.0",
    "sentry-sdk[fastapi]>=2.4.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",     # required by FastAPI File/Form params (content upload router)
    "email-validator>=2.0.0",      # required by pydantic EmailStr (auth router)
    "slowapi>=0.1.9",
    "tiktoken>=0.7.0",             # BPE tokenizer for cl100k_base (text-embedding-3-small)
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "jsonschema>=4.22.0",
    "fakeredis>=2.23.0",           # AC-1 queue round-trip test (test_queue_symmetry)
    "fpdf2>=2.7.0",                 # MIT — synthetic PDF generation for the S2-14 eval harness fixtures only
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations (type hints)
    "S",   # bandit security
    "T20", # flake8-print (no print statements)
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # assert statements allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "pypdfium2.*",
    "pdftext.*",
    "pdfplumber.*",
    "pytesseract.*",
    "langfuse.*",
    "arq.*",
    "slowapi.*",
    "tiktoken.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "slow: tests that take > 2 seconds",
]
filterwarnings = [
    "error",
    # starlette 1.3.x testclient warns when falling back from httpx2 to httpx;
    # httpx2 is not in uv.lock and the httpx fallback works — suppress until the lock adds httpx2.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]


